# cselec-3-final-project

./: .env.example  .gitignore  Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
alembic/versions/: 0001_initial_schema.py
app/: config.py
app/cache/: redis_client.py
app/db/: models.py
app/graphql/: schema.py  types.py
app/graphql/resolvers/: semesters.py  students.py  subscriptions.py
app/kafka/: consumer.py  topics.py
backend/: .env.example  .gitignore  Dockerfile
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/cache/: redis_client.py
backend/app/db/: session.py
backend/app/graphql/: schema.py  types.py
backend/app/graphql/resolvers/: grades.py  semesters.py  students.py  subjects.py
backend/app/kafka/: consumer.py  producer.py  simulator.py
backend/app/ml/: classifier.py
backend/scripts/: entrypoint.sh  seed.py
backend/tests/: test_graphql.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  ws-server.cjs
frontend/app/: globals.css  layout.tsx
frontend/app/(main)/: layout.tsx
frontend/app/(main)/dashboard/: dashboard-cards.tsx  page.tsx  (+2 more)
frontend/components/: data-table.tsx
frontend/components/custom/: app-link.tsx  app-sidebar.tsx  data-table.tsx  navigation-context.tsx  navigation-provider.tsx  site-header.tsx
frontend/components/ui/: chart.tsx  dropdown-menu.tsx
frontend/lib/: format.ts  graphql.ts
frontend/lib/graphql/: operations.ts
scripts/: seed.py
tests/: conftest.py  test_cache.py  test_graphql.py  test_kafka.py  test_seed.py
(+13 files in other folders)
