[project]
name = "cselec-3-final-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "strawberry-graphql[fastapi]>=0.300.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis>=5.0.4",
    "aiokafka>=0.10.0",
    "scikit-learn>=1.4.2",
    "numpy>=1.26.4",
    "joblib>=1.4.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.2.1",
    "faker>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "testcontainers[postgres,redis,kafka]>=4.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
